#688: Added Vendor Item queries